2015-03-27  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/patch.nanorc: Recognize also Debian package diffs.
	Fixes https://bugs.launchpad.net/ubuntu/+source/nano/+bug/1300565
	requested by Rolf Leggewie.
	* src/search.c (do_replace_loop): Adjust some whitespace and wrapping.
	* src/search.c (do_replace_loop): Place a call to edit_refresh better,
	and remove two unneeded ones.  This greatly speeds up nano when doing
	a Replace All with *lots* of occurrences.
	* src/{color,global,nano,text,utils}.c:  Normalize some whitespace.
	* src/global.c (strtosc): The linter is only available when colour is.
	* src/global.c, src/text.c: Treat the formatter like a speller,	to fix
	compilation with --disable-speller.  Fixes Savannah bug #44607.

2015-03-25  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/debian.nanorc: Slightly widen and relax the header regex.
	* doc/syntax/python.nanorc: Hashes inside triple-quoted strings should
	not cause comment colouring.  (Inside single-qouted strings neither,
	but then quotes in comments will be coloured like strings.)  This
	solves https://bugs.launchpad.net/ubuntu/+source/nano/+bug/481363.
	* src/global.c (strtomenu): Remove mistaken menu name -- as the
	formatter allows no interaction it needs no associated menu.
	* src/text.c (do_formatter): Remove unneeded statement -- nothing
	has changed the value of 'currmenu'.
	* src/global.c (strtosc), doc/man/nanorc.5: Allow rebinding the
	linter when nano was configured with --disable-speller.

2015-03-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_alt_speller): Avoid the spell checker reporting
	an error when the marked region is zero bytes long.  The message
	is not needed -- it gets printed by the caller.  This generalizes
	the fix for Savannah bug #29393.
	* src/text.c (do_alt_speller): Do not unset the mark before the
	possible bailout because of a zero-sized region.
	* NEWS: Option --noread allows writing, not reading, to named pipes.
